<resources>
    <string name="app_name">Basbes</string>
    <string name="title_find">Find</string>
    <string name="title_chats">Chats</string>
    <string name="title_notifications">Notifications</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_action_profile">Profile</string>
    <string name="menu_save">Save</string>
    <string name="menu_search">Search</string>
    <string name="popup_menu_block">Block</string>
    <string name="popup_menu_block_delete">Block and hide conversation</string>
    <string name="popup_menu_report">Report</string>
    <string name="popup_menu_unblock">Unblock</string>
    <string name="popup_menu_copy_text">Copy message text</string>
    <string name="popup_menu_delete_message">Delete message for you</string>
    <string name="popup_menu_delete_message_all">Delete message for everyone</string>
    <string name="popup_menu_report_message">Report message</string>
    <string name="clipboard_label_copied_text">Copied Text</string>
    <string name="love_button_hint_love">Like</string>
    <string name="love_button_hint_love_back">Like Back</string>
    <string name="love_button_hint_unlove">UnLike</string>
    <string name="message_button_hint">Message</string>
    <string name="request_button_hint">Reveal</string>
    <string name="request_button_cancel_hint">Cancel</string>
    <string name="request_button_approve_hint">Approve</string>
    <string name="request_button_unreveal_hint">Unreveal</string>
    <string name="alert_dialog_edit">Edit revealed contacts</string>
    <string name="alert_dialog_unreveal">Unreveal my contacts</string>
    <string name="edit_unreveal_alert_dialog_title">Select Options:</string>
    <string name="audio_permission_dialog_title">Microphone is needed</string>
    <string name="audio_permission_dialog_message">This app uses the microphone to detect nearby devices. The mic is only used while you are searching. We don\'t listen to your conversations during the searching process.</string>
    <string name="chat_inactive_alert_dialog_title">Conversation Is Inactive</string>
    <string name="chat_blocked_alert_dialog_title">Conversation Disabled</string>
    <string name="block_report_button_hint" formatted="false">Block\\Report</string>
    <string name="unblock_report_button_hint" formatted="false">Unblock\\Report</string>
    <string name="edit_profile_button_hint">Edit Profile</string>
    <string name="see_more_about_button">See more about %1$s</string>
    <string name="see_more_button">See more</string>
    <string name="upload_button">Upload</string>
    <string name="send_request_button">Send request</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="user_social_private_button">Private contact</string>
    <string name="send_report_button">Send report</string>
    <string name="sign_in_cancelled">Sign in has been cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error occurred</string>
    <string name="upload_image_error">Sorry, couldn\'t upload your image.</string>
    <string name="download_image_error">Sorry, couldn\'t download your image.</string>
    <string name="update_profile_error">Sorry, couldn\'t update your profile.</string>
    <string name="empty_profile_avatar_error">Profile picture can\'t be blank.</string>
    <string name="empty_profile_name_error">You must enter your name.</string>
    <string name="no_sound_id_found_error">We couldn\'t fetch your profile ID. Make sure you have internet connection</string>
    <string name="send_message_error">Sorry, couldn\'t send your message.</string>
    <string name="send_request_error">Sorry, couldn\'t send your request.</string>
    <string name="activate_chat_error">Sorry, couldn\'t activate you conversation, check your internet connection</string>
    <string name="user_visible_error">Sorry, couldn\'t change your visibility.</string>
    <string name="mic_muted_toast">Mic is mute; Basbes can\'t search.</string>
    <string name="headset_plugged_toast">Basbes: unplug headset for max range, or at least don\'t wear it.</string>
    <string name="turn_speaker_on_toast">Basbes: turn speaker on to maximize visibility range.</string>
    <string name="increase_volume_toast">Basbes: increase volume to maximize visibility range.</string>
    <string name="cannot_toggle_speaker_toast">You don\'t have any calls or plugged headset.</string>
    <string name="muted_device_toast">Please disable total silence mode.</string>
    <string name="user_statistics_headline">Statistics</string>
    <string name="about_user_headline">About</string>
    <string name="user_relationship_headline">Relationship</string>
    <string name="user_interested_in_headline">Interested in</string>
    <string name="user_gender_headline">Gender</string>
    <string name="user_horoscope_headline">Horoscope</string>
    <string name="user_birthday_headline">Birth date</string>
    <string name="user_work_school_headline">Work and education</string>
    <string name="user_habits_hobbies_headline">Habits and hobbies</string>
    <string name="user_social_headline">Social and contacts</string>
    <string name="user_avatar_headline">Profile Picture</string>
    <string name="user_cover_headline">Cover Picture</string>
    <string name="user_name_hint">Name</string>
    <string name="user_biography_hint">Biography</string>
    <string name="user_smoke_headline">Smoke</string>
    <string name="user_water_pipe_headline">Hookah</string>
    <string name="user_drugs_headline">Drugs</string>
    <string name="user_drink_headline">Drink</string>
    <string name="user_athlete_headline">Athlete</string>
    <string name="user_gamer_headline">Games</string>
    <string name="user_travel_headline">Travel</string>
    <string name="user_cook_headline">Cook</string>
    <string name="user_read_headline">Read</string>
    <string name="user_lives_headline">lives in</string>
    <string name="user_nationality_headline">Nationality</string>
    <string name="user_hometown_headline">Hometown</string>
    <string name="user_religion_headline">Religion views</string>
    <string name="user_politics_headline">Political views</string>
    <string name="user_work_headline">Occupation</string>
    <string name="user_college_headline">College</string>
    <string name="user_school_headline">School</string>
    <string name="user_phone_hint">Phone number</string>
    <string name="user_facebook_hint">Facebook username</string>
    <string name="user_instagram_hint">Instagram username</string>
    <string name="user_twitter_hint">Twitter username</string>
    <string name="user_snapchat_hint">Snapchat username</string>
    <string name="user_tumblr_hint">Tumblr username</string>
    <string name="user_pubg_hint">PUBG name</string>
    <string name="user_vk_hint">VK screen name</string>
    <string name="user_askfm_hint">Ask.fm username</string>
    <string name="user_curiouscat_hint">CuriousCat username</string>
    <string name="user_saraha_hint">Saraha username</string>
    <string name="user_pinterest_hint">Pinterest username</string>
    <string name="user_soundcloud_hint">SoundCloud username</string>
    <string name="user_spotify_hint">Spotify username</string>
    <string name="user_anghami_hint">Anghami Id</string>
    <string name="user_twitch_hint">Twitch username</string>
    <string name="user_youtube_hint">YouTube channel</string>
    <string name="user_linkedIn_hint">LinkedIn username</string>
    <string name="user_wikipedia_hint">Wikipedia page</string>
    <string name="user_website_hint">Website URL</string>
    <string name="send_message_hint">Type a message…</string>
    <string name="required_helper">*Required</string>
    <string name="user_nationality_helper">E.g., France or Germany</string>
    <string name="user_lives_helper">E.g., Paris, France</string>
    <string name="user_hometown_helper">E.g., Berlin, Germany</string>
    <string name="user_religion_helper">E.g., Christian but i do not believe in &#8230;</string>
    <string name="user_politics_helper">E.g., Liberal or Republican but hates Trump</string>
    <string name="user_work_helper">E.g., A Doctor in El Camino Hospital</string>
    <string name="user_college_helper">E.g., Studied at Harvard University</string>
    <string name="user_school_helper">E.g., Studied at Santa Monica High School</string>
    <string name="user_Phone_helper">E.g., 010xxxxxxxx</string>
    <string name="user_facebook_helper">Username or ID profile link</string>
    <string name="user_instagram_helper">Username or profile link</string>
    <string name="user_twitter_helper">Username without @ or profile link</string>
    <string name="user_snapchat_helper">Username or stories link</string>
    <string name="user_tumblr_helper">Username or profile link</string>
    <string name="user_pubg_helper">Full player name or character ID</string>
    <string name="activate_chat_dialog_title">Keep conversation active for:</string>
    <string name="report_dialog_title">Report User?</string>
    <string name="report_dialog_message">If someone is in immediate danger, call local emergency service.\n\nPlease select the reason for reporting this user or content, we won’t let the person know who reported them.</string>
    <string name="activate_chat_dialog_message">P.S. If you select Forever you will read messages instantly without scratching. Therefore, don\'t choose it unless you start to trust this person.</string>
    <string name="settings_category_visible">Visibility</string>
    <string name="settings_category_display">Display</string>
    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_category_about">About</string>
    <string name="settings_preference_title_visible">Visible to others</string>
    <string name="settings_preference_title_speaker">Speaker</string>
    <string name="settings_preference_title_volume">Volume</string>
    <string name="settings_preference_title_night">Night mode</string>
    <string name="settings_preference_title_ringtone">Notification sound</string>
    <string name="settings_preference_title_version">Build version</string>
    <string name="settings_preference_summery_visible">If disabled, other nearby devices can not discover you. Only enable this option when needed as it consumes battery.</string>
    <string name="settings_preference_summery_speaker">Turn the speaker on if you have a call in progress, VoIP call, audio chat, or your headset is plugged.</string>
    <string name="settings_preference_summery_volume">Increase the volume to be discoverable in a wider range. Maximum Volume covers about 12 meters.</string>
    <string name="profile_image_description">Your Profile picture</string>
    <string name="add_image_button_description">Add Profile picture</string>
    <string name="radio_button_report_harassment">Harassment or bullying</string>
    <string name="radio_button_report_suicide">Suicide or self-harm</string>
    <string name="radio_button_report_inappropriate">Shown sexual or inappropriate content</string>
    <string name="radio_button_report_impersonate">Impersonating someone else</string>
    <string name="radio_button_report_Hate">Hate speech</string>
    <string name="radio_button_report_child_abuse">Child abuse</string>
    <string name="radio_button_report_misinformation">Spreads false information</string>
    <string name="radio_button_report_violence">Violence or repulsive</string>
    <string name="radio_button_report_terrorism">Promotes terrorism</string>
    <string name="radio_button_report_scams">Scams</string>
    <string name="radio_button_report_spam">Spam</string>
    <string name="radio_button_report_other">Other</string>
</resources>