<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory
        app:key="visible_category"
        app:title="@string/settings_category_visible">

        <SwitchPreference
            app:key="visible"
            app:title="@string/settings_preference_title_visible"
            app:summary="@string/settings_preference_summery_visible"
            app:defaultValue="false"
            />
        <SwitchPreference
            app:key="speaker"
            app:title="@string/settings_preference_title_speaker"
            app:summary="@string/settings_preference_summery_speaker"
            app:defaultValue="false"
            app:icon="@drawable/ic_speaker_volume_up"
            />
        <SeekBarPreference
            app:key="volume"
            app:title="@string/settings_preference_title_volume"
            app:summary="@string/settings_preference_summery_volume"/>


    </PreferenceCategory>

    <PreferenceCategory
        app:key="display_category"
        app:title="@string/settings_category_display">

        <ListPreference
            app:key="night"
            app:title="@string/settings_preference_title_night"
            app:useSimpleSummaryProvider="true"
            />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="notifications_category"
        app:title="@string/settings_category_notifications">

        <Preference
            app:key="notification"
            app:title="@string/settings_preference_title_ringtone">

            <!--<intent
                android:action="android.intent.action.RINGTONE_PICKER">
                <extra
                    android:name="EXTRA_RINGTONE_TYPE"
                    android:value="TYPE_RINGTONE"/>
            </intent>-->
        </Preference>


</PreferenceCategory>


    <PreferenceCategory
        app:key="about_category"
        app:title="@string/settings_category_about">

        <Preference
            app:key="version"
            app:title="@string/settings_preference_title_version"
            app:summary="1.1.0"
            app:selectable="false"/>


    </PreferenceCategory>

</PreferenceScreen>
