<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.getin.car.activities.MainActivity">

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="1"
        android:title="@string/menu_action_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_menu_invite"
        android:orderInCategory="2"
        android:title="@string/menu_invite"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="3"
        android:title="@string/menu_log_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_menu_home"
        android:orderInCategory="4"
        android:title="@string/title_find"
        app:showAsAction="never" />
</menu>