<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:id="@+id/top_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/edit_profile_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:srcCompat="@drawable/ic_round_account_filled_72"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_divider"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/item_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_profile_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_profile_icon"
        app:layout_constraintTop_toTopOf="@+id/edit_profile_icon"
        tools:text="@tools:sample/first_names" />

    <FrameLayout
        android:id="@+id/image_frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_required">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/profile_image_description"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_round_account_filled_72"
            android:tint="@color/transparent_edit_image"/>



        <ImageView
            android:id="@+id/add_photo"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/small_margin"
            android:contentDescription="@string/add_image_button_description"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

        <ImageView
            android:id="@+id/progress_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/progress_animation"
            android:visibility="gone"
            tools:ignore="ContentDescription" />

    </FrameLayout>

    <TextView
        android:id="@+id/item_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/required_helper"
        android:textColor="@color/mtrl_on_surface_emphasis_medium"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/item_title"
        app:layout_constraintTop_toBottomOf="@+id/item_title" />

</androidx.constraintlayout.widget.ConstraintLayout>